--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ theme: material-x
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/lunhui1994/lunhui1994.github.io.git
+  repo: git@github.com:lunhui1994/lunhui1994.github.io.git
   branch: master
 
 # live2d 看板娘
